src/objects/WEBXAssoc__c.object
<CustomObject>
    <description>a custom object to hold meeting / account / opportunity associations</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Salesforce.com account ID</description>
        <label>Account</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Hold EventId</description>
        <label>Event</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meetingkey__c</fullName>
        <description>Actually, conf ID of a SalesCenter session.</description>
        <label>Meetingkey</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Salesforce.com opportunity ID</description>
        <label>Opportunity</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Offering__c</fullName>
        <description>PS Offering ID</description>
        <label>PS Offering</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>WebEx Assoc</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Meetingkey__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Event__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WebEx Assoc</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>